--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -40,7 +40,7 @@
       <div class="parte1">
         <h2>Bem vindo(a)!</h2>
         <p>Entre e desfrute de nossa solução</p>
-       <button onclick="window.location.href='login.html'">Login</button>
+        <button onclick="window.location.href='login.html'">Login</button>
       </div>
 
       <div class=" card-cadastro">
@@ -49,7 +49,7 @@
         <div class="formulario">
 
           <!-- CADASTRO 1 -->
-          <div id="cadastro1" class="cadastro1" >
+          <div id="cadastro1" class="cadastro1">
             <div class="campo" style="position: relative;">
               <div class="desenho">
                 <img src="./assets/imagem/boneco.png" alt="">
@@ -90,66 +90,65 @@
               <div class="desenho">
                 <img src="./assets/imagem/cadeado.png" alt="">
               </div>
-                 <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
-                 <i id="toggleConfirmacao" class="fa-solid fa-eye-slash" 
-                   style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);
+              <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
+              <i id="toggleConfirmacao" class="fa-solid fa-eye-slash" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);
                     cursor: pointer; font-size: 18px; color: #f4f4f4;">
-                 </i>
-              
+              </i>
+
               <span id="erro-confirmar" class="msg-erro">As senhas não coincidem</span>
             </div>
 
             <div class="indicador">
               <p id="etapa" style="color: #00283a;">Etapa 1 de 2</p>
-               <button class="botaoGeral" type="button" onclick="irParaCadastro2()">Próximo</button>
+              <button class="botaoGeral" type="button" onclick="irParaCadastro2()">Próximo</button>
             </div>
 
 
           </div>
           <!-- CADASTRO 2 -->
           <div class="cadastro2" style="display:none; width: 100%; flex-direction: column; gap: 10px;">
-  
-  <div class="voltar" style="margin-bottom: 10px; cursor: pointer;"></div>
 
-  <!-- Linha CEP + UF -->
-  <div class="linha-campos">
-    <div class="campo">
-      <input id="cep" type="text" placeholder="CEP" />
-      <span id="erro-cep" class="msg-erro">CEP inválido</span>
-    </div>
-    <div class="campo">
-      <input id="uf" type="text" placeholder="UF" />
-    </div>
-  </div>
+            <div class="voltar" style="margin-bottom: 10px; cursor: pointer;"></div>
 
-  <div class="campo">
-    <input id="cidade" type="text" placeholder="Cidade" />
-    <span id="erro-cidade" class="msg-erro">Informe a cidade</span>
-  </div>
+            <!-- Linha CEP + UF -->
+            <div class="linha-campos">
+              <div class="campo">
+                <input id="cep" type="text" placeholder="CEP" />
+                <span id="erro-cep" class="msg-erro">CEP inválido</span>
+              </div>
+              <div class="campo">
+                <input id="uf" type="text" placeholder="UF" />
+              </div>
+            </div>
 
-  <div class="campo">
-    <input id="bairro" type="text" placeholder="Bairro" />
-    <span id="erro-bairro" class="msg-erro">Informe o bairro</span>
-  </div>
+            <div class="campo">
+              <input id="cidade" type="text" placeholder="Cidade" />
+              <span id="erro-cidade" class="msg-erro">Informe a cidade</span>
+            </div>
 
-  <div class="linha-campos">
-    <div class="campo">
-      <input id="logradouro" type="text" placeholder="Logradouro" />
-    </div>
-    <div class="campo">
-      <input id="numero" type="text" placeholder="Número" />
-    </div>
-  </div>
+            <div class="campo">
+              <input id="bairro" type="text" placeholder="Bairro" />
+              <span id="erro-bairro" class="msg-erro">Informe o bairro</span>
+            </div>
 
-  <div class="campo">
-    <input id="complemento" type="text" placeholder="Complemento" />
-  </div>
+            <div class="linha-campos">
+              <div class="campo">
+                <input id="logradouro" type="text" placeholder="Logradouro" />
+              </div>
+              <div class="campo">
+                <input id="numero" type="text" placeholder="Número" />
+              </div>
+            </div>
 
-  <div class="botao-final">
-    <button class="botaoGeral" type="button" onclick="finalizarCadastro()">Finalizar</button>
-  </div>
-  
-</div>
+            <div class="campo">
+              <input id="complemento" type="text" placeholder="Complemento" />
+            </div>
+
+            <div class="botao-final">
+              <button class="botaoGeral" type="button" onclick="cadastrar()">Finalizar</button>
+            </div>
+
+          </div>
 
 
 
@@ -176,128 +175,79 @@
 
 <script>
 
-
-
-  // Array para armazenar empresas cadastradas para validação de código de ativação 
-  let listaEmpresasCadastradas = [];
-
   // Voltar para a etapa 1 sem perder dados
   function voltarParaCadastro1() {
     document.querySelector(".cadastro2").style.display = "none";
     document.querySelector(".cadastro1").style.display = "flex";
   }
 
+
   function cadastrar() {
-    // aguardar();
+    //empresa
+    const razaoVar = document.getElementById("razaoSocial").value.trim();
+    const cnpjVar = document.getElementById("cnpj").value.trim().replace(/\D/g, "");
+    const emailVar = document.getElementById("email_input").value.trim();
+    const senhaVar = document.getElementById("senha_input").value;
+    const confirmacao_senhaVar = document.getElementById("confirmacao_senha_input").value;
+    //endereco
+    const estadoVar = document.getElementById("uf").value.trim();
+    const cidadeVar = document.getElementById("cidade").value.trim();
+    const bairroVar = document.getElementById("bairro").value.trim();
+    const logradouroVar = document.getElementById("logradouro").value.trim();
+    const numVar = document.getElementById("numero").value.trim();
+    const complementoVar = document.getElementById("complemento") ? document.getElementById("complemento").value.trim() : "";
+    const cepVar = document.getElementById("cep").value.trim().replace(/\D/g, "");
 
-    // Recupere o valor da nova input pelo nome do id
-    // Agora vá para o método fetch logo abaixo
-    var nomeVar = nome_input.value;
-    var emailVar = email_input.value;
-    var senhaVar = senha_input.value;
-    var confirmacaoSenhaVar = confirmacao_senha_input.value;
-    var codigoVar = codigo_input.value;
-    var idEmpresaVincular
-
-    // Verificando se há algum campo em branco
-    if (
-      nomeVar == "" ||
-      emailVar == "" ||
-      senhaVar == "" ||
-      confirmacaoSenhaVar == "" ||
-      codigoVar == ""
-    ) {
-      cardErro.style.display = "block";
-      mensagem_erro.innerHTML =
-        "(Mensagem de erro para todos os campos em branco)";
-
-      finalizarAguardar();
+    if (!razaoVar || !cnpjVar || !emailVar || !senhaVar || !confirmacao_senhaVar ||
+      !estadoVar || !cidadeVar || !bairroVar || !logradouroVar || !numVar || !cepVar) {
       return false;
-    } else {
-      setInterval(sumirMensagem, 5000);
     }
 
-    // Verificando se o código de ativação é de alguma empresa cadastrada
-    for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
-      if (listaEmpresasCadastradas[i].codigo_ativacao == codigoVar) {
-        idEmpresaVincular = listaEmpresasCadastradas[i].id
-        console.log("Código de ativação válido.");
-        break;
-      } else {
-        cardErro.style.display = "block";
-        mensagem_erro.innerHTML = "(Mensagem de erro para código inválido)";
-        finalizarAguardar();
-      }
+    if (senhaVar !== confirmacao_senhaVar) {
+      return false;
     }
 
-    // Enviando o valor da nova input
-    fetch("/usuarios/cadastrar", {
+    fetch("/empresa/cadastrar-com-endereco", {
       method: "POST",
       headers: {
-        "Content-Type": "application/json",
+        "Content-Type": "application/json"
       },
       body: JSON.stringify({
-        // crie um atributo que recebe o valor recuperado aqui
-        // Agora vá para o arquivo routes/usuario.js
-        nomeServer: nomeVar,
+        razaoSocialServer: razaoVar,
+        cnpjServer: cnpjVar,
         emailServer: emailVar,
         senhaServer: senhaVar,
-        idEmpresaVincularServer: idEmpresaVincular
-      }),
-    })
-      .then(function (resposta) {
-        console.log("resposta: ", resposta);
-
-        if (resposta.ok) {
-          cardErro.style.display = "block";
-
-          mensagem_erro.innerHTML =
-            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
-
-          setTimeout(() => {
-            window.location = "login.html";
-          }, "2000");
-
-          limparFormulario();
-          finalizarAguardar();
-        } else {
-          throw "Houve um erro ao tentar realizar o cadastro!";
-        }
+        logradouroServer: logradouroVar,
+        numeroServer: numVar,
+        complementoServer: complementoVar,
+        bairroServer: bairroVar,
+        cidadeServer: cidadeVar,
+        estadoServer: estadoVar,
+        cepServer: cepVar
       })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-        finalizarAguardar();
+    })
+      .then(response => {
+        if (!response.ok) {
+          throw new Error("Erro na requisição: " + response.status);
+        }
+        return response.json();
+      })
+      .then(data => {
+        setTimeout(() => {
+          window.location.href = "login.html";
+        }, 1000);
+      })
+      .catch(error => {
+        console.error("Erro no cadastro:", error);
       });
 
     return false;
   }
 
-  // Listando empresas cadastradas 
-  function listar() {
-    fetch("/empresas/listar", {
-      method: "GET",
-    })
-      .then(function (resposta) {
-        resposta.json().then((empresas) => {
-          empresas.forEach((empresa) => {
-            listaEmpresasCadastradas.push(empresa);
-
-            console.log("listaEmpresasCadastradas")
-            console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-          });
-        });
-      })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-      });
-  }
 
   function sumirMensagem() {
     cardErro.style.display = "none";
   }
-
-
-
 
 
   // --- BOTÕES --- //
@@ -345,15 +295,5 @@
       toggleConfirmacao.classList.add("fa-eye-slash");
     }
   });
-
-  function finalizarCadastro() {
-    if (validarFormularioEtapa2()) {
-      alert("Cadastro efetuado com sucesso!");
-
-      setTimeout(() => {
-        window.location.href = "login.html";
-      }, 100);
-    }
-  }
 
 </script>
