--- a/public/login.html
+++ b/public/login.html
@@ -126,7 +126,7 @@ function entrar() {
                 sessionStorage.ID_EMPRESA = json.idEmpresa;
 
                 setTimeout(() => {
-                    window.location = "./dashboard/dashboard.html";
+                    window.location = "dashboard.html";
                 }, 1000);
             });
         } else {
